--- a/package.json
+++ b/package.json
@@ -11,22 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/web": "^9.6.1",
-    "@reduxjs/toolkit": "^1.9.1",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.5.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/react-redux": "^7.1.24",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
